Staging deploy typo fix

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,6 +147,6 @@ stages:
               displayName: 'Azure App service Deploy'
               inputs:
                 azureSubscription: 'training service connection spacegame'
-                appName: '$(WebAppNameStaging'
+                appName: '$(WebAppNameStaging)'
                 package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
 
